[tool.poetry]
name = "wusa"
version = "0.0.1"
description = "CLI for managing self-hosted GitHub actions runner"
authors = ["Anton Helm <anton.helm@tecnico.ulisboa.pt>"]
license = "MIT"

[tool.poetry.scripts]
wusa = 'wusa.cli:main'

[tool.poetry.dependencies]
python = "^3.6"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
