[tool.poetry]
name = "wusa"
version = "0.0.1"
description = "CLI for managing self-hosted GitHub actions runner"
authors = ["Anton Helm <anton.helm@tecnico.ulisboa.pt>"]
license = "MIT"

[tool.poetry.scripts]
wusa = 'wusa.cli:main'

[tool.poetry.dependencies]
python = "^3.6"
docker = "^4.4.0"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
pytest = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''