[tool.poetry]
name = "wusa"
version = "0.0.1"
description = "CLI for managing self-hosted GitHub actions runner"
authors = ["Anton Helm <anton.helm@tecnico.ulisboa.pt>"]
license = "MIT"

[tool.poetry.scripts]
wusa = 'wusa.main:app'

[tool.poetry.dependencies]
python = "^3.6"
docker = "^4.4.0"
typer = {extras = ["all"], version = "^0.3.2"}
validators = "^0.18.2"
shortuuid = "^1.0.1"
requests = "^2.25.1"
rich = "^9.11.1"
gidgethub = "^5.0.0"
aiohttp = "^3.7.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
atomic=true
force_single_line=true
line_length=88
known_first_party="wusa"


[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
